Simple testing framework

--- a/tipsAndTricks/app/views/first/first-scene.html
+++ b/tipsAndTricks/app/views/first/first-scene.html
@@ -1,3 +1,5 @@
-<div class="palm-body-text">
-    Your application is running!
+<div class="test-status palm-body-text"></div>
+<div class="palm-body-text" x-mojo-loc="">
+  Failures:
+  <ul class="failures"></ul>
 </div>
