First scene formatting

--- a/tipsAndTricks/app/views/first/first-scene.html
+++ b/tipsAndTricks/app/views/first/first-scene.html
@@ -1,5 +1,8 @@
-<div class="test-status palm-body-text"></div>
-<div class="palm-body-text" x-mojo-loc="">
-  Failures:
-  <ul class="failures"></ul>
+<div class="palm-page-header">Automated Tests</div>
+<div class="palm-body">
+    <div class="test-status palm-body-text"></div>
+    <div class="palm-body-text" x-mojo-loc="">
+        Failures:
+        <ul class="failures"></ul>
+    </div>
 </div>
