--- a/tipsAndTricks/app/views/main/main-scene.html
+++ b/tipsAndTricks/app/views/main/main-scene.html
@@ -1,4 +1,5 @@
 <div class="palm-body">
     <div id="testRunner" x-mojo-element="Button"></div>
     <div id="customWidget" x-mojo-element="Button"></div>
+    <div id="periodicService" x-mojo-element="Button"></div>
 </div>
