--- a/tipsAndTricks/app/views/main/main-scene.html
+++ b/tipsAndTricks/app/views/main/main-scene.html
@@ -2,4 +2,5 @@
     <div id="testRunner" x-mojo-element="Button"></div>
     <div id="customWidget" x-mojo-element="Button"></div>
     <div id="periodicService" x-mojo-element="Button"></div>
+    <div id="exampleList" x-mojo-element="Button"></div>
 </div>
