Custom Widget Readme + Headers

--- a/tipsAndTricks/app/views/submit-text/submit-text.html
+++ b/tipsAndTricks/app/views/submit-text/submit-text.html
@@ -1,3 +1,5 @@
+<!-- Copyright 2010 Palm, Inc. All rights reserved. -->
+<!-- Example template for a custom widget. See custom-widget/README for more info -->
 <div class="submit-text">
   <div class="status-header">
     <div id="#{divPrefix}-update-status-text" class="status-textbox focused" x-mojo-element="TextField"></div>
