--- a/tipsAndTricks/app/views/custom-widget/custom-widget-scene.html
+++ b/tipsAndTricks/app/views/custom-widget/custom-widget-scene.html
@@ -1,3 +1,5 @@
+<!-- Copyright 2010 Palm, Inc. All rights reserved. -->
+<!-- Scene view used to demonstrate the SubmitText custom widget. See custom-widget/README for more info -->
 <div class="palm-page-header">Custom Widget</div>
 <div class="palm-body">
     <!-- SubmitText widget. See custom-widget README for more info. -->
