App framework headers

--- a/tipsAndTricks/app/views/main/main-scene.html
+++ b/tipsAndTricks/app/views/main/main-scene.html
@@ -1,3 +1,4 @@
+<!-- Copyright 2010 Palm, Inc. All rights reserved. -->
 <div class="palm-body">
     <div id="testRunner" x-mojo-element="Button"></div>
     <div id="customWidget" x-mojo-element="Button"></div>
