--- a/tipsAndTricks/app/views/test-runner/test-runner-scene.html
+++ b/tipsAndTricks/app/views/test-runner/test-runner-scene.html
@@ -1,3 +1,4 @@
+<!-- Copyright 2010 Palm, Inc. All rights reserved. -->
 <div class="palm-page-header">Automated Tests</div>
 <div class="palm-body">
     <div class="test-status palm-body-text"></div>
