--- a/tipsAndTricks/app/views/example-list/example-list-scene.html
+++ b/tipsAndTricks/app/views/example-list/example-list-scene.html
@@ -1,3 +1,5 @@
+<!-- Copyright 2010 Palm, Inc. All rights reserved. -->
+<!-- Scene view used to demonstrate the PagedList. See paged-list/README for more info -->
 <div class="palm-page-header">Paged List</div>
 <div class="palm-body">
     <div id="listEl" x-mojo-element="PagedList"></div>
