--- a/tipsAndTricks/app/views/example-list/item-template.html
+++ b/tipsAndTricks/app/views/example-list/item-template.html
@@ -1,3 +1,5 @@
+<!-- Copyright 2010 Palm, Inc. All rights reserved. -->
+<!-- Example PagedList item template. See paged-list/README for more info -->
 <div class="palm-row">
 Foo
 
