--- a/tipsAndTricks/app/views/paged-list/paged-list.html
+++ b/tipsAndTricks/app/views/paged-list/paged-list.html
@@ -1,3 +1,4 @@
+<!-- Copyright 2010 Palm, Inc. All rights reserved. -->
 <div id="#{divPrefix}-paged-list" x-mojo-element="List"></div>
 
 <div class="refresh-cont hidden">
