--- a/tipsAndTricks/app/views/periodic/periodic-scene.html
+++ b/tipsAndTricks/app/views/periodic/periodic-scene.html
@@ -1,3 +1,5 @@
+<!-- Copyright 2010 Palm, Inc. All rights reserved. -->
+<!-- Scene view used to demonstrate a PeriodicService. See periodic-service/README for more info -->
 <div class="palm-page-header" x-mojo-loc="">Periodic Task Sample</div>
 <div class="palm-body">
     <div class="palm-group">
